--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
     <br>
     <br>
     <br>
-    <button>Redirect</button>
+    <button routerLink="/home" routerLinkActive="active">Redirect</button>
 </div>
+
+<router-outlet></router-outlet>
