Added a new service file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <br>
     <br>
     <br>
-    <button routerLink="/home" routerLinkActive="active">Redirect</button>
+    <button routerLink="/home" routerLinkActive="active" (click)="btnclicked()">Redirect</button>
 </div>
 
 <router-outlet></router-outlet>
